crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__application_multiple.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\nf x y z"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Call {
        function: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: Var {
                kind: LowVar,
                name: "f",
            },
        },
        arguments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 3,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                    },
                },
                value: Var {
                    kind: LowVar,
                    name: "x",
                },
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 5,
                    },
                    end: Position {
                        line: 1,
                        column: 6,
                    },
                },
                value: Var {
                    kind: LowVar,
                    name: "y",
                },
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 8,
                    },
                },
                value: Var {
                    kind: LowVar,
                    name: "z",
                },
            },
        ],
    },
}
