crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__application_single.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\nf x"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Call {
        function: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: Var {
                kind: LowVar,
                name: "f",
            },
        },
        arguments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 3,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                    },
                },
                value: Var {
                    kind: LowVar,
                    name: "x",
                },
            },
        ],
    },
}
