crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__binop_compose_left.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\nf << g"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 7,
        },
    },
    value: BinOps {
        operands: [
            BinOpOperand {
                expr: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 2,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "f",
                    },
                },
                op: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: "<<",
                },
            },
        ],
        last: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
            value: Var {
                kind: LowVar,
                name: "g",
            },
        },
    },
}
