crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__binop_greater_than.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\na > b"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: BinOps {
        operands: [
            BinOpOperand {
                expr: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 2,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "a",
                    },
                },
                op: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: ">",
                },
            },
        ],
        last: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 5,
                },
                end: Position {
                    line: 1,
                    column: 6,
                },
            },
            value: Var {
                kind: LowVar,
                name: "b",
            },
        },
    },
}
